--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.0",
+    "lucide-react": "^0.445.0",
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18"
