--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/material": "^6.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@tanstack/react-query": "^5.59.6",
+    "@web3modal/wagmi": "^5.1.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.445.0",
@@ -21,7 +23,9 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "2.x",
+    "wagmi": "^2.12.17"
   },
   "devDependencies": {
     "@types/node": "^20",
