--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^6.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@rainbow-me/rainbowkit": "^2.2.0",
     "@tanstack/react-query": "^5.59.6",
     "@web3modal/wagmi": "^5.1.11",
     "all": "^0.0.0",
